Prevent tiled post search filters from being hidden behind the footer

--- a/css/src/_tiled-post-search.scss
+++ b/css/src/_tiled-post-search.scss
@@ -12,6 +12,7 @@
 	[data-sticky] {
 		&.sticky {
 			top: 0 !important; // sass-lint:disable-line no-important
+			overflow: auto;
 
 			@include breakpoint(medium2) {
 				top: 1rem !important; // sass-lint:disable-line no-important
